# PROJECT_CS204

./: .dockerignore  .gitignore  Dockerfile  HYPOTHESES_AND_ANALYSIS.md  PLAN.md  PRD.md  PROJECT_DESCRIPTION.md  README.md  check_protocols.py  docker-compose.yml  generate_content.py  main.py  project_idea.md  pyproject.toml  remote-clients.py  remote-servers.py  requirements.txt  rubrics.md  run.bat  run.sh  run_test_suite.py  slides.md  start-servers.py
certs/: cert.pem  generate_certs.py  key.pem
client/: benchmark.py
dashboard/: app.py
data/content/: 100kb.txt  10kb.txt  1kb.txt  1mb.txt  gophermap  small_00.txt  small_01.txt  small_02.txt  small_03.txt  small_04.txt  small_05.txt  small_06.txt  small_07.txt  small_08.txt  small_09.txt  small_10.txt  small_11.txt  small_12.txt  small_13.txt  small_14.txt  small_15.txt  small_16.txt  small_17.txt  small_18.txt  small_19.txt
results/: demo_dashboard.html  demo_dashboard_demo_baseline.html  demo_dashboard_demo_live.html  demo_dashboard_demo_packet_loss.html  results_Baseline.csv  results_Baseline_demo_baseline.csv  results_Baseline_demo_live.csv  results_High_Latency.csv  results_High_Latency_demo_live.csv  results_Mixed.csv  results_Packet_Loss.csv  results_Packet_Loss_demo_live.csv  results_Packet_Loss_demo_packet_loss.csv  results_Realistic_WAN_demo_live.csv  summary_statistics.csv  summary_statistics_demo_baseline.csv  summary_statistics_demo_live.csv  summary_statistics_demo_packet_loss.csv
results/Hypothesis1/: README.md
results/Hypothesis2/: README.md
server/: proxy.py  udp_proxy.py
(+34 files in other folders)
