[project]
name = "project-cs204"
version = "0.2.0"
description = "Original Gopher vs Modern Gopher vs HTTP/1.1 vs HTTP/2 vs HTTP/3 — Protocol Performance Comparison"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Servers
    "flask==3.0.0",
    "quart>=0.19.0",
    "hypercorn>=0.17.0",
    "aioquic>=1.0.0",
    # Benchmark client
    "requests==2.31.0",
    "httpx[http2]>=0.27.0",
    "urllib3>=2.0.0",
    # TLS certificates
    "cryptography>=42.0.0",
    # Analysis
    "pandas>=2.2.0",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.2",
    "prettytable>=3.9.0",
    "pyarrow>=14.0.0",
    "plotly>=5.24.0",
    "flask-socketio>=5.3.0",
]
